# avis

./: .gitignore  Cargo.toml  Log.md  README.md  index.html  package.json  pnpm-lock.yaml
api/server_example/: Cargo.toml
api/server_example/src/: main.rs
crates/: Cargo.toml
crates/api/: openapi.yaml
crates/api/examples/: fetch_example.js
crates/api/server_example/: Cargo.toml
crates/api/server_example/src/: main.rs
crates/math_core/: Cargo.toml
crates/math_core/benches/: math_core_bench.rs
crates/math_core/src/: bls.rs  dkg.rs  lib.rs  poly.rs  schnorr.rs
crates/math_core/tests/: bls_test.rs  dkg_sim.rs  dkg_test.rs  poly_test.rs
src/: App.vue
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs
