[package]
name = "server_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
math_core = { path = "../../crates/math_core" }
ark-serialize = "0.6"
ark-bn254 = "0.6"
ark-ec = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
